deploy/k8s/base/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  labels:
    app.kubernetes.io/name: kontinuance
    app.kubernetes.io/component: server
spec:
  selector:
    app.kubernetes.io/name: kontinuance
    app.kubernetes.io/component: server
  ports:
    - name: http
      port: 8077
      targetPort: http
