deploy/k8s/base/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app.kubernetes.io/name: kontinuance
    app.kubernetes.io/component: web
spec:
  selector:
    app.kubernetes.io/name: kontinuance
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 80
      targetPort: http
